# ShadowSuiteFramework

./: .CI_Emulator.py  .gitlab-ci.yml  CI_Emulator.py  CODE_OF_CONDUCT.md  MANUAL  README  README-DEV  README.md  devHelper.py  merge_to_master.sh  publish_update.sh  setup.cfg  setup.py  tox.ini
src/: .hakku_API.py  API.py  API_test.py  CatayaoLibLnx.h  MANUAL  SSF.py  ShadowFramework  ShadowFramework.c  ShadowLib.c  ShadowLib.h  ShadowSuite  ShadowSuite.c  ShadowSuite.py  ShadowSuiteLE.py  ShadowSuite_Cracking.c  ShadowSuite_DoS.c  ShadowSuite_Exploit.c  ShadowSuite_Hijack.c  ShadowSuite_InstDeps.c  ShadowSuite_Recon.c  ShadowSuite_Scan.c  ShadowSuite_Utils.c  __init__.py  apt_requirements  debug  debug.bash  hakku_integrator  inst_deps.bash  install.sh  instdeps.bash  logo.c  profile.sh  python_requirements  python_requirements.txt  sflib.h  shadow_suite_as_module_test.py  test
src/core/: .fullupdate.py.bak  __init__.py  ansi.py  asciigraphs.py  colors.py  error.py  exceptions.py  find_module.py  fullupdate.py  gethost.py  hakku.py  joke.py  list_module.py  list_services.py  logger.py  manage_module.py  menu.py  misc.py  module_manager.py  neofetch.sh  quote.py  search_module.py  suggest.py  temp.py  temp_module.py  temp_service.py  update.py  use_framework.py  use_module.py  version.py
src/data/: neofetch.config
src/dev/: ATTENTION  Httrack.txt  devs  lines
src/extras/: Hacking_Phases.txt  Security Level Codes (for profiles).txt  Security Level Codes.txt  changelog  codes-of-conduct.txt
src/modules/: BRAT.py  angryfuzzer.py  automater.py  blackhydra.py  cat.py  (+40 more)
(+113 files in other folders)
