[metadata]
coc_file = CODE_OF_CONDUCT.md
license_file = LICENSE
manual_file = MANUAL
developers_file = README-DEV

default_config = src/data/.default_config.dat
current_config = src/data/config.dat
neofetch_config = src/data/neofetch.config

asciinema_videos = src/dev/asciinema/*.cast
extras = src/extras/*

modules = src/modules/*

output_directory = src/output/.git_include

services = src/services/*

[bdist_wheel]
universal=0
